Handled warnings in test cases